--- a/portafolio.html
+++ b/portafolio.html
@@ -41,13 +41,10 @@
 
         <h2 id="esp32">Prácticas del ESP32</h2>
         <h3>Blink</h3>
-        <video width="640" height="360" controls loop muted>
-            <source src="https://videos/20250324_203232.mp4" type="video/mp4">
-        </video>
-        <video width="640" height="360" controls loop muted>
-            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-            Tu navegador no soporta videos.
-        </video>
+        
+        <iframe src="https://drive.google.com/file/d/1MXyKxkF-lheDaUGrqHZFdjWQ4EQJC8hU/preview" width="640" height="360" allow="autoplay"></iframe>
+
+
 
         <h2 id="tests">Tests de seguimiento</h2>
         
