--- a/portafolio.html
+++ b/portafolio.html
@@ -42,7 +42,7 @@
         <h2 id="esp32">Prácticas del ESP32</h2>
 
         <h3>Mi Documento PDF</h3>
-        <a href="https://github.com/Luciapp20/mi-pagina-web/blob/f772888d9d5712a51468e7847be8c5a7f61761bf/docs/Blink.pdf" target="_blank">Haz clic aquí para ver o descargar el PDF</a>
+        <a href="https://drive.google.com/file/d/1xfBomVNxc3Jb9-iP2Yc-EWNeP_AwjPOO/preview" target="_blank">Haz clic aquí para ver o descargar el PDF</a>
 
         <h3>Blink</h3>
         
