Actualizo prácticas esp32

--- a/index.html
+++ b/index.html
@@ -39,17 +39,7 @@
 
         </ol>
 
-        <h2 id="esp32">Prácticas del ESP32</h2>
-
-        <h3>Mi Documento PDF</h3>
-        <a href="https://drive.google.com/file/d/1xfBomVNxc3Jb9-iP2Yc-EWNeP_AwjPOO/preview" target="_blank">Haz clic aquí para ver o descargar el PDF</a>
-
-        <h3>Blink</h3>
         
-        <iframe src="https://drive.google.com/file/d/1MXyKxkF-lheDaUGrqHZFdjWQ4EQJC8hU/preview" width="640" height="360" allow="autoplay"></iframe>
-
-
-
         <h2 id="tests">Tests de seguimiento</h2>
         
         <p>A continuación se encuentran los test de seguimiento de la asignatura:</p>
@@ -60,6 +50,22 @@
         <img src="img/img5.jpg" width="400">
         <img src="img/img6.jpg" width="400">
         <img src="img/img7.jpg" width="600" class="rotada">
+
+        <hr style="clear:both">
+
+        <h2 id="esp32">Prácticas del ESP32</h2>
+
+        <h3>Blink</h3>
+        <h4>Mi Documento PDF</h4>
+        <a href="https://drive.google.com/file/d/1xfBomVNxc3Jb9-iP2Yc-EWNeP_AwjPOO/preview" target="_blank">Haz clic aquí para ver o descargar el PDF</a>
+        <iframe src="https://drive.google.com/file/d/1MXyKxkF-lheDaUGrqHZFdjWQ4EQJC8hU/preview" width="640" height="360" allow="autoplay"></iframe>
+        <hr style="clear:both">
+
+        <h3>BLE_Led</h3>
+        <h4>Mi Documento PDF</h4>
+        <iframe src="https://drive.google.com/file/d/1O3pwe-NLVMwfgrqLdaM9--sR8nhOCJ5B/preview" width="640" height="360" allow="autoplay"></iframe>
+        <hr style="clear:both">
+
 
     </section>
     <footer>
