Actualizo prácticas esp32

--- a/index.html
+++ b/index.html
@@ -58,12 +58,18 @@
         <h3>Blink</h3>
         <h4>Mi Documento PDF</h4>
         <a href="https://drive.google.com/file/d/1xfBomVNxc3Jb9-iP2Yc-EWNeP_AwjPOO/preview" target="_blank">Haz clic aquí para ver o descargar el PDF</a>
+        <br>
+        <iframe src="https://drive.google.com/file/d/1xfBomVNxc3Jb9-iP2Yc-EWNeP_AwjPOO/preview" width="640" height="360" allow="autoplay"></iframe>
+        <br>
         <iframe src="https://drive.google.com/file/d/1MXyKxkF-lheDaUGrqHZFdjWQ4EQJC8hU/preview" width="640" height="360" allow="autoplay"></iframe>
         <hr style="clear:both">
 
         <h3>BLE_Led</h3>
         <h4>Mi Documento PDF</h4>
+        <a href="https://drive.google.com/file/d/1O3pwe-NLVMwfgrqLdaM9--sR8nhOCJ5B/preview" target="_blank">Haz clic aquí para ver o descargar el PDF</a>
+        <br>
         <iframe src="https://drive.google.com/file/d/1O3pwe-NLVMwfgrqLdaM9--sR8nhOCJ5B/preview" width="640" height="360" allow="autoplay"></iframe>
+        <br>
         <hr style="clear:both">
 
 
