Actualizo prácticas esp32

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <a href="https://drive.google.com/file/d/1xWUjMKXwuxY41DxBX3tdZw0I_5iLhCwH/preview" target="_blank">Haz clic aquí para ver o descargar el PDF</a>
         
         <br>
-        <iframe src="https://drive.google.com/file/d/1xWUjMKXwuxY41DxBX3tdZw0I_5iLhCwH/preview" target="_blank">
+        <iframe src="https://drive.google.com/file/d/1xWUjMKXwuxY41DxBX3tdZw0I_5iLhCwH/preview" target="_blank"></iframe>
         <br>
         <hr>
         <iframe src="https://drive.google.com/file/d/1MXyKxkF-lheDaUGrqHZFdjWQ4EQJC8hU/preview" width="640" height="360" allow="autoplay"></iframe>
@@ -71,7 +71,7 @@
         <a href="https://drive.google.com/file/d/1pQCU0M5RDPsFccfLDun0tjC3XmPe8HrT/preview" target="_blank">Haz clic aquí para ver o descargar el PDF</a>
         
         <br>
-        <iframe src="https://drive.google.com/file/d/1pQCU0M5RDPsFccfLDun0tjC3XmPe8HrT/preview" target="_blank">
+        <iframe src="https://drive.google.com/file/d/1pQCU0M5RDPsFccfLDun0tjC3XmPe8HrT/preview" target="_blank"></iframe>
         <br>
         <hr>
         <iframe src="https://drive.google.com/file/d/1ChKSQ6Py0IJwjBxkukE3xkbx56xchb1z/preview" width="640" height="360" allow="autoplay"></iframe>
@@ -81,7 +81,7 @@
         <h4>Mi Documento PDF</h4>
         <a href="https://drive.google.com/file/d/1jxay9Nh9JH-k5JIFNCdf_9so5DuNQX_T/preview" target="_blank">Haz clic aquí para ver o descargar el PDF</a>
         <br>
-        <iframe src="https://drive.google.com/file/d/1jxay9Nh9JH-k5JIFNCdf_9so5DuNQX_T/preview" target="_blank">
+        <iframe src="https://drive.google.com/file/d/1jxay9Nh9JH-k5JIFNCdf_9so5DuNQX_T/preview" target="_blank"></iframe>
         <br>
         <hr>
         <iframe src="https://drive.google.com/file/d/1CkqMtj12_PGwQ0ldmZq5a_gWj-GuB_ai/preview" width="640" height="360" allow="autoplay"></iframe>
