Actualizo prácticas esp32

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         <br>
         <hr>
         <iframe src="https://drive.google.com/file/d/1MXyKxkF-lheDaUGrqHZFdjWQ4EQJC8hU/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>Video de funcionamiento</p>
+
         <hr style="clear:both">
 
         <h3>Transmisión de datos BLE</h3>
@@ -75,6 +77,8 @@
         <br>
         <hr>
         <iframe src="https://drive.google.com/file/d/1ChKSQ6Py0IJwjBxkukE3xkbx56xchb1z/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>Video de funcionamiento</p>
+
         <hr style="clear:both">
 
         <h3>BLE_Led</h3>
@@ -85,8 +89,25 @@
         <br>
         <hr>
         <iframe src="https://drive.google.com/file/d/1CkqMtj12_PGwQ0ldmZq5a_gWj-GuB_ai/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>Video de funcionamiento</p>
+
         <hr style="clear:both">
 
+        
+        <h3>Modo Ap + Station</h3>
+        <h4>Mi Documento PDF</h4>
+        <a href="https://drive.google.com/file/d/1r7h2tQIOLP-y8GlE_k0ENiEzZRpMWdCQ/preview" target="_blank">Haz clic aquí para ver o descargar el PDF</a>
+        <br>
+        <iframe src="https://drive.google.com/file/d/1r7h2tQIOLP-y8GlE_k0ENiEzZRpMWdCQ/preview" target="_blank"></iframe>
+        <br>
+        <hr>
+        <iframe src="https://drive.google.com/file/d/1Ct8pSn9YaN4bdcpkUHVjudjQBI14xG5I/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>Video de funcionamiento</p>
+        <br>
+        <iframe src="https://drive.google.com/file/d/1x_oXy4K2XngVItQfo-wKIuZs4VIAhOqE/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>Imágen de Wifi</p>
+
+        <hr style="clear:both">
 
     </section>
     <footer>
