--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <li>Prácticas de laborio</li>
             <li><a href="#tests">Tests de seguimiento</a></li>
             <li><a href="#esp32">Prácticas ESP32</a></li>
+            <li><a href="#esp32comunicacion">Prácticas comunicaciones entre ESP32</a></li>
 
         </ol>
 
@@ -108,6 +109,37 @@
         <p>Imágen de Wifi</p>
 
         <hr style="clear:both">
+
+        <h2 id="esp32comunicacion">Prácticas de conexiones mediante ESP32</h2>
+        <p>
+            En esta sección se muestran códigos, imagenes y videos de las comunicaciones que hemos logrado conectando dos dispositivos ESP32S3 utilizando varios métodos diferentes.
+        </p>
+        <br>
+        <h3>Comunicación UART entre Placas ESP32-S3</h3>
+
+        <h4>Mi Documento PDF</h4>
+        
+        <a href="https://drive.google.com/file/d/1qxpM5ei7rD2fzI9xnvELtopmR-iXS-D4/preview" target="_blank">Haz clic aquí para ver o descargar el PDF</a>
+        <br>
+        <iframe src="https://drive.google.com/file/d/1qxpM5ei7rD2fzI9xnvELtopmR-iXS-D4/preview" target="_blank"></iframe>
+        <br>
+        <hr>
+        <h5>Evidencias del primer proyecto de la práctica</h5>
+        <iframe src="https://drive.google.com/file/d/14SysGFByDcM2DZAwJi5aorSGlOejlMXT/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>Video de funcionamiento</p>
+        <br>
+        <iframe src="https://drive.google.com/file/d/1aiDNsHvYxDgX3BgNFPzjqqxF6z1eBMmD/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>Imágen de funcionamiento</p>
+        <hr>
+        <hr>
+        <h5>Evidencias del segundo proyecto de la práctica</h5>
+        <iframe src="https://drive.google.com/file/d/14_3DOKTHm88PIEoDuj-NutR3wPu_WhPE/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>Video de funcionamiento</p>
+        <br>
+        <iframe src="https://drive.google.com/file/d/1d0pq-fS3fadq7vPBnUAW-hxBG_yl63ZR/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>Imágen de funcionamiento</p>
+        <hr style="clear:both">
+
 
     </section>
     <footer>
