medio actualizo practicas ESP32

--- a/index.html
+++ b/index.html
@@ -35,21 +35,23 @@
             <li>Coste</li>
             <li>Prácticas de laborio</li>
             <li><a href="#tests">Tests de seguimiento</a></li>
-            <li><a href="#esp32">Prácticas ESP32</a></li>
+        <li><a href="#esp32">Prácticas ESP32</a>
             <ul>
-                <li><a href="blink">Blink</a></li>
-                <li><a href="ble">Transmisión de datos BLE</a></li>
-                <li><a href="bleled">BLE_LED</a></li>
+                <li><a href="#blink">Blink</a></li>
+                <li><a href="#ble">Transmisión de datos BLE</a></li>
+                <li><a href="#bleled">BLE_LED</a></li>
                 <li><a href="apstation">Modo Ap + Station</a></li>
 
             </ul>
-            <li><a href="#esp32comunicacion">Prácticas comunicaciones entre ESP32</a></li>
+        </li>
+            <li><a href="#esp32comunicacion">Prácticas comunicaciones entre ESP32</a>
             <ul>
                 <li><a href="#esp32UART">Comunicación UART entre Placas ESP32-S3</a></li>
-                <li><a href="esp32RS485">Comunicación ESP32-S3 mediante RS485 con Control Automático (HW-519P4)</a></li>
-                <li><a href="esp32CAN">Comunicación ESP32-S3 mediante CAN</a></li>
+                <li><a href="#esp32RS485">Comunicación ESP32-S3 mediante RS485 con Control Automático (HW-519P4)</a></li>
+                <li><a href="#esp32CAN">Comunicación ESP32-S3 mediante CAN</a></li>
 
             </ul>
+        </li>
         </ol>
 
         
