medio actualizo practicas ESP32

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li><a href="#blink">Blink</a></li>
                 <li><a href="#ble">Transmisión de datos BLE</a></li>
                 <li><a href="#bleled">BLE_LED</a></li>
-                <li><a href="apstation">Modo Ap + Station</a></li>
+                <li><a href="#apstation">Modo Ap + Station</a></li>
 
             </ul>
         </li>
