medio actualizo practicas ESP32

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <li><a href="#blink">Blink</a></li>
                 <li><a href="#ble">Transmisión de datos BLE</a></li>
                 <li><a href="#bleled">BLE_LED</a></li>
+                <li><a href="#bleledamp">BLE ampliación</a></li>
                 <li><a href="#apstation">Modo Ap + Station</a></li>
 
             </ul>
@@ -108,6 +109,23 @@
 
         <hr style="clear:both">
 
+        <h3 id="bleledamp">BLE ampliación</h3>
+        <h4>Mi Documento PDF</h4>
+        <a href="https://drive.google.com/file/d/1VwILf1Pr6FPVfzSIMva1Rk4wTR3PINd4/preview" target="_blank">Haz clic aquí para ver o descargar el PDF</a>
+        <br>
+        <iframe src="https://drive.google.com/file/d/1VwILf1Pr6FPVfzSIMva1Rk4wTR3PINd4/preview" target="_blank"></iframe>
+        <br>
+        <hr>
+        <iframe src="https://drive.google.com/file/d/14L-98kFJh_jRGkUb5A3K2lpew00u9uiC/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>Video de funcionamiento</p>
+        <br>
+        <iframe src="https://drive.google.com/file/d/14ChEQcYNNgKN2Jds2EJeEKn8T72JKDMd/preview" width="640" height="360" allow="autoplay"></iframe>
+        <br>
+        <h4>Evidencias de la segunda parte de la práctica</h4>
+        <iframe src="https://drive.google.com/file/d/14M27VmOoMEvGMbmCe29dnrVGjxHFG_l-/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>Video de funcionamiento</p>
+
+        <hr style="clear:both">
         
         <h3 id="apstation">Modo Ap + Station</h3>
         <h4>Mi Documento PDF</h4>
