Actualizo prácticas comunicacion CAN

--- a/index.html
+++ b/index.html
@@ -201,25 +201,16 @@
 
         <h4>Mi Documento PDF</h4>
         
-        <a href="https://drive.google.com/file/d/1qxpM5ei7rD2fzI9xnvELtopmR-iXS-D4/preview" target="_blank">Haz clic aquí para ver o descargar el PDF</a>
+        <a href="https://drive.google.com/file/d/1Eld50wbp27tG1S7hfBjKrgeWsY-WqT-S/preview" target="_blank">Haz clic aquí para ver o descargar el PDF</a>
         <br>
-        <iframe src="https://drive.google.com/file/d/1qxpM5ei7rD2fzI9xnvELtopmR-iXS-D4/preview" target="_blank"></iframe>
+        <iframe src="https://drive.google.com/file/d/1Eld50wbp27tG1S7hfBjKrgeWsY-WqT-S/preview" target="_blank"></iframe>
         <br>
         <hr>
-        <h5>Evidencias del primer proyecto de la práctica</h5>
-        <iframe src="https://drive.google.com/file/d/13sY9C996RxJskak_WkrdknMVSKPePgJC/preview" width="640" height="360" allow="autoplay"></iframe>
-        <p>Video de funcionamiento</p>
+        <h5>Evidencias proyecto</h5>
+        <iframe src="https://drive.google.com/file/d/1PPFhBMq9duoVJx2-LBsa142EFTTnC7BK/preview" width="640" height="360" allow="autoplay"></iframe>
+        <iframe src="https://drive.google.com/file/d/1Qcs7wTD-y4VIp55-n5hEWqvX4fZbZpcB/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>Imágenes de funcionamiento</p>
         <br>
-        <iframe src="https://drive.google.com/file/d/13vpov-o-n9QHYCFcDENhoIhQhZ9JOfFS/preview" width="640" height="360" allow="autoplay"></iframe>
-        <p>Imágen de funcionamiento</p>
-        <br>
-        <br>
-        <h5>Evidencias del segundo proyecto de la práctica</h5>
-        <iframe src="https://drive.google.com/file/d/13yUty1CdK9ulp7SOYwOJAWNDEIoI53lQ/preview" width="640" height="360" allow="autoplay"></iframe>
-        <p>Video de funcionamiento</p>
-        <br>
-        <iframe src="https://drive.google.com/file/d/13xpa8uvvEx20AMk68VIpt3UM3UB5uGaW/preview" width="640" height="360" allow="autoplay"></iframe>
-        <p>Imágen de funcionamiento</p>
         <hr style="clear:both">
     </section>
     <footer>
