Actualizo con trabajo coche

--- a/index.html
+++ b/index.html
@@ -35,24 +35,25 @@
             <li>Coste</li>
             <li>Prácticas de laborio</li>
             <li><a href="#tests">Tests de seguimiento</a></li>
-        <li><a href="#esp32">Prácticas ESP32</a>
-            <ul>
+            <li><a href="#esp32">Prácticas ESP32</a>
+                <ul>
                 <li><a href="#blink">Blink</a></li>
                 <li><a href="#ble">Transmisión de datos BLE</a></li>
                 <li><a href="#bleled">BLE_LED</a></li>
                 <li><a href="#bleledamp">BLE ampliación</a></li>
                 <li><a href="#apstation">Modo Ap + Station</a></li>
 
-            </ul>
-        </li>
+                </ul>
+            </li>
             <li><a href="#esp32comunicacion">Prácticas comunicaciones entre ESP32</a>
-            <ul>
+                <ul>
                 <li><a href="#esp32UART">Comunicación UART entre Placas ESP32-S3</a></li>
                 <li><a href="#esp32RS485">Comunicación ESP32-S3 mediante RS485 con Control Automático (HW-519P4)</a></li>
                 <li><a href="#esp32CAN">Comunicación ESP32-S3 mediante CAN</a></li>
 
-            </ul>
-        </li>
+                </ul>
+            </li>
+            <li><a href="#coche">Proyecto final de la asignatura</a></li>
         </ol>
 
         
@@ -210,6 +211,44 @@
         <iframe src="https://drive.google.com/file/d/1PPFhBMq9duoVJx2-LBsa142EFTTnC7BK/preview" width="640" height="360" allow="autoplay"></iframe>
         <iframe src="https://drive.google.com/file/d/1Qcs7wTD-y4VIp55-n5hEWqvX4fZbZpcB/preview" width="640" height="360" allow="autoplay"></iframe>
         <p>Imágenes de funcionamiento</p>
+        <br>
+        <hr style="clear:both">
+
+        <h2 id="coche">Proyecto final de la asignatura</h2>
+        <h3>Control Avanzado de Coche RC con ESP32-S3, BLE, MQTT y Almacenamiento de Datos</h3>
+        <h4>Mi Documento PDF</h4>
+        
+        <a href="https://drive.google.com/file/d/1Eld50wbp27tG1S7hfBjKrgeWsY-WqT-S/preview" target="_blank">Haz clic aquí para ver o descargar el PDF</a>
+        <br>
+        <iframe src="https://drive.google.com/file/d/1Eld50wbp27tG1S7hfBjKrgeWsY-WqT-S/preview" target="_blank"></iframe>
+        <br>
+        <hr>
+        <h5>Evidencias proyecto</h5>
+        <iframe src="https://drive.google.com/file/d/12TeEPbD7duCJstNKPRa9MnoyccOKqlXn/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>Imagen del terminal corriendo mosquitto</p>
+        <br>
+        <iframe src="https://drive.google.com/file/d/1lgzROkUZurfO5TfTmUzJKgg97O2uLfUk/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>Fotografía del chasis del coche con el ESP32-S3, motor paso a paso, servomotor, buzzer, led...</p>
+        <br>
+        <iframe src="https://drive.google.com/file/d/1PMvoFE8DvCOUR9kawu5b3wofawwGXKjt/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>Fotografía de la consola que muestra el resultado del análisis de datos, incluyendo el número total de comandos, la frecuencia de cada uno y el comando más utilizado</p>
+        <br>
+        <iframe src="https://drive.google.com/file/d/1fk1t6sXX1tfQXjNpWS54so1gjhmvhTc2/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>La imagen muestra la aplicación Light Blue conectada al dispositivo "CocheStepperS3_MQTT" y la interfaz para escribir valores en la característica RX.</p>
+        <br>
+        <iframe src="https://drive.google.com/file/d/1WLS8oEmA-Rxdguk5fBNSQqh0LTK7TDbM/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>La imagen muestra a MQTT Explorer conectado al broker local mostrando los mensajes JSON publicados por el ESP32 en el topic especificado.</p>
+        <br>
+        <iframe src="https://drive.google.com/file/d/185jq1m9g5aooiPcyHgP26-YmAkT7mEym/preview" width="640" height="360" allow="autoplay"></iframe>
+        <p>La imagen muestra el Monitor Serie que presenta mensajes de conexión a Wi-Fi, al broker MQTT, la recepción de un comando BLE (ej. 'F') y la publicación del mensaje JSON correspondiente a MQTT</p>
+        <br>
+        <iframe src="https://drive.google.com/file/d/1ijq0MB81h_y1CRYi1YdzsRXV01awoDNm/preview" width="640" height="360" allow="autoplay"></iframe>
+        <br>
+        <iframe src="https://drive.google.com/file/d/1igGgmppRJlxvFyXpHSLlazuKcW8uH6Yl/preview" width="640" height="360" allow="autoplay"></iframe>
+        <br>
+        <iframe src="https://drive.google.com/file/d/1irS2ry8eXqzAooUO5bF8por1dFJd4MQ8/preview" width="640" height="360" allow="autoplay"></iframe>
+        <br>
+        <p>Videos de funcionamiento del coche.</p>
         <br>
         <hr style="clear:both">
     </section>
