--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
         <img src="img/img6.jpg" width="400">
         <img src="img/img7.jpg" width="600" class="rotada">
 
+        <img src="img/img8.jpg" width="400">
+        <img src="img/img9.jpg" width="400">
+        <img src="img/img10.jpg" width="400">
+        <img src="img/img11.jpg" width="400">
+        <img src="img/img12.jpg" width="400">
+        <img src="img/img13.jpg" width="400">
+
         <hr style="clear:both">
 
         <h2 id="esp32">Prácticas del ESP32</h2>
