--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
     <footer>
         <p><a href="#título">Ir al inicio</a></p>
         <p><a href="mailto:pardoperezlucia@gmail.com">Contacto: pardoperezlucia@gmail.com</a></p>
-        <p>© 2023 Lucía Pardo Pérez. Todos los derechos reservados.</p>
+        <p> Lucía Pardo Pérez. </p>
     </footer>
 </body>
 </html>
